--- a/src/Pages/StudentDetails/StudDetails.css
+++ b/src/Pages/StudentDetails/StudDetails.css
@@ -1,25 +1,62 @@
 /* styles.css or your preferred stylesheet */
 .modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000; /* Adjust the z-index to make sure it's above other elements */
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
+  display: flex;
+  justify-content: center;
+  padding-top: 10px;
+  align-items: center;
+  z-index: 1000; /* Adjust the z-index to make sure it's above other elements */
+}
+
+.modal-content {
+  background: #fff;
+  padding: 31px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.blur-background {
+  filter: blur(5px); /* Adjust the blur intensity as needed */
+}
+
+.stud1 {
+  margin-right: 30px;
+  margin-left: 30px;
+}
+
+.hd1 {
+  margin-left: 33px;
+}
+
+.edit {
+  padding: 3px;
+  text-align: left;
+  /* padding-top: 7px; */
+}
+
+.edit-main {
+  display: flex;
+  flex-direction: column; /* Align the input fields column-wise */
+  align-items: left;
+  margin: 2px;
+}
+
+.edit-sub {
+  width: 100%; /* Make the input fields take up the full width of their container */
+}
+
+.btn2 {
+  background-color: #613e73;
+  border-radius: 6px;
   
-  .modal-content {
-    background: #fff;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  }
-  
-  .blur-background {
-    filter: blur(5px); /* Adjust the blur intensity as needed */
-  }
-  
+  padding: 4px;
+  /* margin-top: 7px; */
+  text-align: left;
+  color: white;
+  border-color: aliceblue;
+}
