--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,101 @@
-.App {
+*{
+  Margin :0; 
+ Padding :0 ;
+ }
+
+/* main{
+  margin-left: 20px;
+  margin-right: 70px;
+} */
+body{
+  margin: 0px;
+}
+.topnav ul{
+  list-style-type: none;
+  background-color: #2c1e33;
+  padding: 0px;
+  margin: 0px;
+  overflow: hidden;
+}
+ 
+.topnav a{
+  color: white;
+  text-decoration: none;
+  padding: 15px;
+  display: block;
   text-align: center;
+  max-width: 1000px;
+  
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.topnav a:hover{
+  background-color: rgb(55, 51, 61);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.topnav li{
+   float: left;
+  
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.btn1{
+  background-color: #46384c;
+  border-radius: 6px;
+  margin-left:  1119px;
+  padding: 10px;
+  margin-top: 7px;
+  color: white;
+  
+}
+
+
+.login {
+  max-width: 400px;
+  margin: auto;
+  margin-top: 80px;
+  padding: 20px;
+  
+  border-radius: 30px;
+  background: #d9d9e3;
+  box-shadow:  1px 1px 40px #c3c3cc,
+           -1px -1px 40px #efeffa;
+}
+
+form {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+label {
+  margin-bottom: 8px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input {
+  color: #35303b;
+  border: 2px solid #35303b;
+  border-radius: 10px;
+  padding: 8px 8px;
+  background: transparent;
+  /* max-width: 399px; */
+ }
+
+ input:active {
+  box-shadow: 2px 2px 15px #30243e inset;
+ }
+
+
+ 
+td {
+  /* border: 1px solid black; */
+  border-collapse: collapse;
+  background-color: rgb(193, 202, 205);
+  
+  text-align: center;
+  height: 50px;
+}
+
+table{
+  width: 96%;
+  margin-top: 40px;
+  
 }
